feat: 역 이름 중복 검증 구현
Co-authored-by: iamjooon2 <iamjooon2@gmail.com>